RealtimeRender/GIRLCore/core/girlparse.output
Terminals which are not used

   ID


Grammar

    0 $accept: start $end

    1 start: ri_stmt_list

    2 array_init: /* empty */

    3 string_array_init: /* empty */

    4 num_array_init: /* empty */

    5 array: string_array
    6      | num_array

    7 string_array: real_string_array
    8             | single_element_string_array

    9 real_string_array: array_init LBRACK string_list RBRACK

   10 single_element_string_array: array_init string_list_entry

   11 string_list: string_list string_list_entry
   12            | string_list_entry

   13 string_list_entry: string_array_init STRING

   14 num_array: real_num_array
   15          | single_element_num_array

   16 real_num_array: array_init LBRACK num_list RBRACK

   17 single_element_num_array: array_init num_list_entry

   18 num_list: num_list num_list_entry
   19         | num_list_entry

   20 num_list_entry: num_array_init NUM

   21 paramlist: paramlist_init paramlist_contents

   22 paramlist_init: /* empty */

   23 paramlist_contents: paramlist_entry paramlist_contents
   24                   | /* empty */

   25 paramlist_entry: STRING array

   26 ri_stmt_list: ri_stmt_list ri_stmt
   27             | ri_stmt

   28 ri_stmt: ACCELERATOR STRING paramlist
   29        | AREALIGHTSOURCE STRING paramlist
   30        | ATTRIBUTEBEGIN
   31        | ATTRIBUTEEND
   32        | CAMERA STRING paramlist
   33        | CONCATTRANSFORM num_array
   34        | COORDINATESYSTEM STRING
   35        | COORDSYSTRANSFORM STRING
   36        | FILM STRING paramlist
   37        | IDENTITY
   38        | LIGHTSOURCE STRING paramlist
   39        | LOOKAT NUM NUM NUM NUM NUM NUM NUM NUM NUM
   40        | MATERIAL STRING paramlist
   41        | MAKENAMEDMATERIAL STRING paramlist
   42        | NAMEDMATERIAL STRING paramlist
   43        | OBJECTBEGIN STRING
   44        | OBJECTEND
   45        | OBJECTINSTANCE STRING
   46        | PIXELFILTER STRING paramlist
   47        | REVERSEORIENTATION
   48        | ROTATE NUM NUM NUM NUM
   49        | SAMPLER STRING paramlist
   50        | SCALE NUM NUM NUM
   51        | SEARCHPATH STRING
   52        | SHAPE STRING paramlist
   53        | PORTALSHAPE STRING paramlist
   54        | SURFACEINTEGRATOR STRING paramlist
   55        | TEXTURE STRING STRING STRING paramlist
   56        | TRANSFORMBEGIN
   57        | TRANSFORMEND
   58        | TRANSFORM real_num_array
   59        | TRANSLATE NUM NUM NUM
   60        | VOLUMEINTEGRATOR STRING paramlist
   61        | VOLUME STRING paramlist
   62        | WORLDBEGIN
   63        | WORLDEND


Terminals, with rules where they appear

$end (0) 0
error (256)
STRING (258) 13 25 28 29 32 34 35 36 38 40 41 42 43 45 46 49 51 52
    53 54 55 60 61
ID (259)
NUM (260) 20 39 48 50 59
LBRACK (261) 9 16
RBRACK (262) 9 16
ACCELERATOR (263) 28
AREALIGHTSOURCE (264) 29
ATTRIBUTEBEGIN (265) 30
ATTRIBUTEEND (266) 31
CAMERA (267) 32
CONCATTRANSFORM (268) 33
COORDINATESYSTEM (269) 34
COORDSYSTRANSFORM (270) 35
FILM (271) 36
IDENTITY (272) 37
LIGHTSOURCE (273) 38
LOOKAT (274) 39
MATERIAL (275) 40
MAKENAMEDMATERIAL (276) 41
NAMEDMATERIAL (277) 42
OBJECTBEGIN (278) 43
OBJECTEND (279) 44
OBJECTINSTANCE (280) 45
PIXELFILTER (281) 46
REVERSEORIENTATION (282) 47
ROTATE (283) 48
SAMPLER (284) 49
SCALE (285) 50
SEARCHPATH (286) 51
PORTALSHAPE (287) 53
SHAPE (288) 52
SURFACEINTEGRATOR (289) 54
TEXTURE (290) 55
TRANSFORMBEGIN (291) 56
TRANSFORMEND (292) 57
TRANSFORM (293) 58
TRANSLATE (294) 59
VOLUME (295) 61
VOLUMEINTEGRATOR (296) 60
WORLDBEGIN (297) 62
WORLDEND (298) 63
HIGH_PRECEDENCE (299)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
start (46)
    on left: 1, on right: 0
array_init (47)
    on left: 2, on right: 9 10 16 17
string_array_init (48)
    on left: 3, on right: 13
num_array_init (49)
    on left: 4, on right: 20
array (50)
    on left: 5 6, on right: 25
string_array (51)
    on left: 7 8, on right: 5
real_string_array (52)
    on left: 9, on right: 7
single_element_string_array (53)
    on left: 10, on right: 8
string_list (54)
    on left: 11 12, on right: 9 11
string_list_entry (55)
    on left: 13, on right: 10 11 12
num_array (56)
    on left: 14 15, on right: 6 33
real_num_array (57)
    on left: 16, on right: 14 58
single_element_num_array (58)
    on left: 17, on right: 15
num_list (59)
    on left: 18 19, on right: 16 18
num_list_entry (60)
    on left: 20, on right: 17 18 19
paramlist (61)
    on left: 21, on right: 28 29 32 36 38 40 41 42 46 49 52 53 54 55
    60 61
paramlist_init (62)
    on left: 22, on right: 21
paramlist_contents (63)
    on left: 23 24, on right: 21 23
paramlist_entry (64)
    on left: 25, on right: 23
ri_stmt_list (65)
    on left: 26 27, on right: 1 26
ri_stmt (66)
    on left: 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
    46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63,
    on right: 26 27


state 0

    0 $accept: . start $end

    ACCELERATOR         shift, and go to state 1
    AREALIGHTSOURCE     shift, and go to state 2
    ATTRIBUTEBEGIN      shift, and go to state 3
    ATTRIBUTEEND        shift, and go to state 4
    CAMERA              shift, and go to state 5
    CONCATTRANSFORM     shift, and go to state 6
    COORDINATESYSTEM    shift, and go to state 7
    COORDSYSTRANSFORM   shift, and go to state 8
    FILM                shift, and go to state 9
    IDENTITY            shift, and go to state 10
    LIGHTSOURCE         shift, and go to state 11
    LOOKAT              shift, and go to state 12
    MATERIAL            shift, and go to state 13
    MAKENAMEDMATERIAL   shift, and go to state 14
    NAMEDMATERIAL       shift, and go to state 15
    OBJECTBEGIN         shift, and go to state 16
    OBJECTEND           shift, and go to state 17
    OBJECTINSTANCE      shift, and go to state 18
    PIXELFILTER         shift, and go to state 19
    REVERSEORIENTATION  shift, and go to state 20
    ROTATE              shift, and go to state 21
    SAMPLER             shift, and go to state 22
    SCALE               shift, and go to state 23
    SEARCHPATH          shift, and go to state 24
    PORTALSHAPE         shift, and go to state 25
    SHAPE               shift, and go to state 26
    SURFACEINTEGRATOR   shift, and go to state 27
    TEXTURE             shift, and go to state 28
    TRANSFORMBEGIN      shift, and go to state 29
    TRANSFORMEND        shift, and go to state 30
    TRANSFORM           shift, and go to state 31
    TRANSLATE           shift, and go to state 32
    VOLUME              shift, and go to state 33
    VOLUMEINTEGRATOR    shift, and go to state 34
    WORLDBEGIN          shift, and go to state 35
    WORLDEND            shift, and go to state 36

    start         go to state 37
    ri_stmt_list  go to state 38
    ri_stmt       go to state 39


state 1

   28 ri_stmt: ACCELERATOR . STRING paramlist

    STRING  shift, and go to state 40


state 2

   29 ri_stmt: AREALIGHTSOURCE . STRING paramlist

    STRING  shift, and go to state 41


state 3

   30 ri_stmt: ATTRIBUTEBEGIN .

    $default  reduce using rule 30 (ri_stmt)


state 4

   31 ri_stmt: ATTRIBUTEEND .

    $default  reduce using rule 31 (ri_stmt)


state 5

   32 ri_stmt: CAMERA . STRING paramlist

    STRING  shift, and go to state 42


state 6

   33 ri_stmt: CONCATTRANSFORM . num_array

    $default  reduce using rule 2 (array_init)

    array_init                go to state 43
    num_array                 go to state 44
    real_num_array            go to state 45
    single_element_num_array  go to state 46


state 7

   34 ri_stmt: COORDINATESYSTEM . STRING

    STRING  shift, and go to state 47


state 8

   35 ri_stmt: COORDSYSTRANSFORM . STRING

    STRING  shift, and go to state 48


state 9

   36 ri_stmt: FILM . STRING paramlist

    STRING  shift, and go to state 49


state 10

   37 ri_stmt: IDENTITY .

    $default  reduce using rule 37 (ri_stmt)


state 11

   38 ri_stmt: LIGHTSOURCE . STRING paramlist

    STRING  shift, and go to state 50


state 12

   39 ri_stmt: LOOKAT . NUM NUM NUM NUM NUM NUM NUM NUM NUM

    NUM  shift, and go to state 51


state 13

   40 ri_stmt: MATERIAL . STRING paramlist

    STRING  shift, and go to state 52


state 14

   41 ri_stmt: MAKENAMEDMATERIAL . STRING paramlist

    STRING  shift, and go to state 53


state 15

   42 ri_stmt: NAMEDMATERIAL . STRING paramlist

    STRING  shift, and go to state 54


state 16

   43 ri_stmt: OBJECTBEGIN . STRING

    STRING  shift, and go to state 55


state 17

   44 ri_stmt: OBJECTEND .

    $default  reduce using rule 44 (ri_stmt)


state 18

   45 ri_stmt: OBJECTINSTANCE . STRING

    STRING  shift, and go to state 56


state 19

   46 ri_stmt: PIXELFILTER . STRING paramlist

    STRING  shift, and go to state 57


state 20

   47 ri_stmt: REVERSEORIENTATION .

    $default  reduce using rule 47 (ri_stmt)


state 21

   48 ri_stmt: ROTATE . NUM NUM NUM NUM

    NUM  shift, and go to state 58


state 22

   49 ri_stmt: SAMPLER . STRING paramlist

    STRING  shift, and go to state 59


state 23

   50 ri_stmt: SCALE . NUM NUM NUM

    NUM  shift, and go to state 60


state 24

   51 ri_stmt: SEARCHPATH . STRING

    STRING  shift, and go to state 61


state 25

   53 ri_stmt: PORTALSHAPE . STRING paramlist

    STRING  shift, and go to state 62


state 26

   52 ri_stmt: SHAPE . STRING paramlist

    STRING  shift, and go to state 63


state 27

   54 ri_stmt: SURFACEINTEGRATOR . STRING paramlist

    STRING  shift, and go to state 64


state 28

   55 ri_stmt: TEXTURE . STRING STRING STRING paramlist

    STRING  shift, and go to state 65


state 29

   56 ri_stmt: TRANSFORMBEGIN .

    $default  reduce using rule 56 (ri_stmt)


state 30

   57 ri_stmt: TRANSFORMEND .

    $default  reduce using rule 57 (ri_stmt)


state 31

   58 ri_stmt: TRANSFORM . real_num_array

    $default  reduce using rule 2 (array_init)

    array_init      go to state 66
    real_num_array  go to state 67


state 32

   59 ri_stmt: TRANSLATE . NUM NUM NUM

    NUM  shift, and go to state 68


state 33

   61 ri_stmt: VOLUME . STRING paramlist

    STRING  shift, and go to state 69


state 34

   60 ri_stmt: VOLUMEINTEGRATOR . STRING paramlist

    STRING  shift, and go to state 70


state 35

   62 ri_stmt: WORLDBEGIN .

    $default  reduce using rule 62 (ri_stmt)


state 36

   63 ri_stmt: WORLDEND .

    $default  reduce using rule 63 (ri_stmt)


state 37

    0 $accept: start . $end

    $end  shift, and go to state 71


state 38

    1 start: ri_stmt_list .
   26 ri_stmt_list: ri_stmt_list . ri_stmt

    ACCELERATOR         shift, and go to state 1
    AREALIGHTSOURCE     shift, and go to state 2
    ATTRIBUTEBEGIN      shift, and go to state 3
    ATTRIBUTEEND        shift, and go to state 4
    CAMERA              shift, and go to state 5
    CONCATTRANSFORM     shift, and go to state 6
    COORDINATESYSTEM    shift, and go to state 7
    COORDSYSTRANSFORM   shift, and go to state 8
    FILM                shift, and go to state 9
    IDENTITY            shift, and go to state 10
    LIGHTSOURCE         shift, and go to state 11
    LOOKAT              shift, and go to state 12
    MATERIAL            shift, and go to state 13
    MAKENAMEDMATERIAL   shift, and go to state 14
    NAMEDMATERIAL       shift, and go to state 15
    OBJECTBEGIN         shift, and go to state 16
    OBJECTEND           shift, and go to state 17
    OBJECTINSTANCE      shift, and go to state 18
    PIXELFILTER         shift, and go to state 19
    REVERSEORIENTATION  shift, and go to state 20
    ROTATE              shift, and go to state 21
    SAMPLER             shift, and go to state 22
    SCALE               shift, and go to state 23
    SEARCHPATH          shift, and go to state 24
    PORTALSHAPE         shift, and go to state 25
    SHAPE               shift, and go to state 26
    SURFACEINTEGRATOR   shift, and go to state 27
    TEXTURE             shift, and go to state 28
    TRANSFORMBEGIN      shift, and go to state 29
    TRANSFORMEND        shift, and go to state 30
    TRANSFORM           shift, and go to state 31
    TRANSLATE           shift, and go to state 32
    VOLUME              shift, and go to state 33
    VOLUMEINTEGRATOR    shift, and go to state 34
    WORLDBEGIN          shift, and go to state 35
    WORLDEND            shift, and go to state 36

    $default  reduce using rule 1 (start)

    ri_stmt  go to state 72


state 39

   27 ri_stmt_list: ri_stmt .

    $default  reduce using rule 27 (ri_stmt_list)


state 40

   28 ri_stmt: ACCELERATOR STRING . paramlist

    $default  reduce using rule 22 (paramlist_init)

    paramlist       go to state 73
    paramlist_init  go to state 74


state 41

   29 ri_stmt: AREALIGHTSOURCE STRING . paramlist

    $default  reduce using rule 22 (paramlist_init)

    paramlist       go to state 75
    paramlist_init  go to state 74


state 42

   32 ri_stmt: CAMERA STRING . paramlist

    $default  reduce using rule 22 (paramlist_init)

    paramlist       go to state 76
    paramlist_init  go to state 74


state 43

   16 real_num_array: array_init . LBRACK num_list RBRACK
   17 single_element_num_array: array_init . num_list_entry

    LBRACK  shift, and go to state 77

    $default  reduce using rule 4 (num_array_init)

    num_array_init  go to state 78
    num_list_entry  go to state 79


state 44

   33 ri_stmt: CONCATTRANSFORM num_array .

    $default  reduce using rule 33 (ri_stmt)


state 45

   14 num_array: real_num_array .

    $default  reduce using rule 14 (num_array)


state 46

   15 num_array: single_element_num_array .

    $default  reduce using rule 15 (num_array)


state 47

   34 ri_stmt: COORDINATESYSTEM STRING .

    $default  reduce using rule 34 (ri_stmt)


state 48

   35 ri_stmt: COORDSYSTRANSFORM STRING .

    $default  reduce using rule 35 (ri_stmt)


state 49

   36 ri_stmt: FILM STRING . paramlist

    $default  reduce using rule 22 (paramlist_init)

    paramlist       go to state 80
    paramlist_init  go to state 74


state 50

   38 ri_stmt: LIGHTSOURCE STRING . paramlist

    $default  reduce using rule 22 (paramlist_init)

    paramlist       go to state 81
    paramlist_init  go to state 74


state 51

   39 ri_stmt: LOOKAT NUM . NUM NUM NUM NUM NUM NUM NUM NUM

    NUM  shift, and go to state 82


state 52

   40 ri_stmt: MATERIAL STRING . paramlist

    $default  reduce using rule 22 (paramlist_init)

    paramlist       go to state 83
    paramlist_init  go to state 74


state 53

   41 ri_stmt: MAKENAMEDMATERIAL STRING . paramlist

    $default  reduce using rule 22 (paramlist_init)

    paramlist       go to state 84
    paramlist_init  go to state 74


state 54

   42 ri_stmt: NAMEDMATERIAL STRING . paramlist
